--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,11 +4,11 @@
       <view class="box" >
             <view class='logo'>
                 <image wx:if="{{userInfo}}" src="{{userInfo.avatarUrl}}" mode='widthFix'></image> 
-                <image wx:else src="https://qncdn.playonwechat.com/nice/users.png" mode='widthFix'></image>   
+                <image wx:else src="../images/user.png" mode='widthFix'></image>   
             </view>
             <view class='list'>
                 <!--text  -->
-                <view class='li' wx:if="{{text}}">
+                <view class='li' wx:if="{{style=='text'}}">
                     <label>设置文字</label>
                     <picker bindchange="bindPickerChange1" value="{{index}}" range="{{textList}}" class='lei img'>
                         <image src='../images/img.png' mode='widthFix'></image>
@@ -17,7 +17,7 @@
                     <input type="text" wx:else bindinput="word" placeholder='请输入文字' value=''></input>
                 </view>
                 <!--img  -->
-                <view class='li' wx:if="{{img}}">
+                <view class='li' wx:if="{{style=='img'}}">
                     <label>上传图片</label>
                     <view bindtap="seeImg" class='lei img'>
                           <image src='../images/img.png' mode='widthFix'></image>
@@ -28,7 +28,7 @@
                     </view>
                 </view>
                 <!--voice  -->
-                <view class='li' wx:if="{{voice}}">
+                <view class='li' wx:if="{{style=='voice'}}">
                     <label>设置口令</label>
                     <picker bindchange="bindPickerChange3" value="{{index}}" range="{{speak}}" class='lei img'>
                           <image src='../images/img.png' mode='widthFix'></image>
@@ -37,7 +37,7 @@
                     <input type="text" wx:else bindinput="speakmove" placeholder='请设置口令' value=''></input>
                 </view>
                 <!--face  -->
-                <view class='li' wx:if="{{face}}">
+                <view class='li' wx:if="{{style=='face'}}">
                     <label>设置颜值口令</label>
                     <picker bindchange="bindPickerChange4" value="{{index}}" range="{{faceList}}" class='lei img'>
                         <image src='../images/img.png' mode='widthFix'></image>
@@ -66,20 +66,29 @@
                 </view>
                 <view class='li tiaozhan'>
                     <label>挑战时间</label>
-                    <picker bindchange="bindPickerChange2" value="{{index}}" range="{{array}}">
+                    <picker bindchange="bindPickerChange2" value="{{array[indexCount]}}" range="{{array}}">
                         <view class="picker">
-                            {{array[index]}}
+                            {{array[indexCount]}}
+                        </view>
+                    </picker>
+                </view>
+                <view class='li tiaozhan'>
+                    <label>是否公开</label>
+                    <picker bindchange="bindPickerChange5" value="{{commons[commonInx]}}" range="{{commons}}">
+                        <view class="picker">
+                            {{commons[commonInx]}}
                         </view>
                     </picker>
                 </view>
                 <view class='little'>需支付￥{{service}}服务费，优先使用余额￥{{allMoney}}</view>
                 <!--生成红包  -->
                  
-                 <form report-submit="true" bindsubmit="formSubmit" class="formSubmit">
+                <form report-submit="true" bindsubmit="formSubmit" class="formSubmit">
                     <button class="submit button active" formType="submit">生成红包</button>
                 </form> 
                 <view class='pin'>
-                    <view class="type" bindtap='change' wx:for="{{typeP}}" data-typei="{{item.typei}}"
+                    <view class="type {{item.typei == style?'red':'default'}}" 
+                          bindtap='change' wx:for="{{typeP}}" data-typei="{{item.typei}}"
                           data-index='{{index}}'>{{item.title}}</view>
                 </view>
             </view>
