--- a/pages/inform/inform.wxss
+++ b/pages/inform/inform.wxss
@@ -2,6 +2,7 @@
   text-align: center;
   padding:40rpx 0;
   background: #d24d46;
+  overflow: hidden;
 }
 .content .avatarUrl image{
     width:140rpx;
@@ -247,10 +248,10 @@ view.again{
   position: relative;
 }
 .question .big{
-  width:60rpx;
-  height: 60rpx;
+  width:62rpx;
+  height: 62rpx;
   position: absolute;
-  top: 40%;
+  top: 46%;
   left: 50%;
   transform: scale(1) translate(-50%, -50%);
   background: #000;
@@ -280,7 +281,7 @@ view.again{
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: #242424;
   opacity: 0.7;
   z-index: 9;
 }
@@ -383,3 +384,48 @@ audio{
 .footer .set1{
   margin-bottom: 10rpx;
 }
+ .formSubmit button{
+  background: none;
+  padding: 0;
+  border-radius: 0;
+  margin: 0;font-size: inherit;line-height: inherit;
+} 
+.formSubmit button:after{
+  content: none;
+}
+/*拼图  */
+.long-btn{ border-width: 1px; border-style: solid; border-radius: 14px; text-align: center; line-height: 126px; }
+.long-btn-brown{ border-color: #ffd0a7; background-color: #ffd0a7; font-weight: bold; color: #e33f3f; }
+
+body{ min-height: 100vh; background-color: #f5f5f5; font-size: 15px; }
+.long-btn{ border-width: 1px; border-style: solid; border-radius: 4px; text-align: center; line-height: 42px; }
+.long-btn-brown{ border-color: #ffd0a7; background-color: #ffd0a7; font-weight: bold; color: #e33f3f; }
+
+ 
+.body{ padding-top: 19px; background-color: #e33f3f; }
+.body .head-pic{ display: block; box-sizing: border-box; width: 76px; height: 76px; margin: 0 auto; border: 2px solid rgba(255,255,255,.6); border-radius: 50%; }
+.body .name{ margin-top: 13px; text-align: center; color: #fff; }
+.body .target-pic{ position: relative; box-sizing: border-box; width: 43px; height: 43px; margin: 26px auto 0; border: 1px solid rgba(255,255,255,.6); }
+.body .target-pic view{ position: absolute; left: 0; top: 0; width: 100%; height: 100%; }
+.begin-btn{ width: 273px; margin: 26px auto 0; }
+.function-box{ display: flex; align-items: center; height: 75px; font-size: 12px; color: #fff; }
+.function-box navigator{ width: calc(100% / 3); text-align: center; line-height: 48px; }
+.function-box navigator text{ display: inline-block; padding-left: 26px; line-height: 19px; }
+.sum{ display: flex; justify-content: space-between; padding: 0 9px 0 21px; line-height: 28px; font-size: 11px; }
+.sum text{ color: #858585; }
+.sum navigator{ color: #3098f9; }
+.game{position: relative; left: 0; top: 0; width: 100%; height: 100vh; background-color: #242424; overflow: auto; }
+.game .title{ display: flex; justify-content: center; align-items: center; text-align: center; line-height: 52px; color: #fff; }
+.counter{ translate: .5s; box-sizing: border-box; width: 48px; height: 48px; margin: 0 auto; border: 2px solid #e33f3f; border-radius: 50%; text-align: center; line-height: 43px; color: #fff; }
+.game .pic-box{ position: relative; width: 288px; margin: 28px auto 0; }
+.game .pic{ translate: .3s; position: absolute; box-sizing: border-box; width: 96px; border: 1px solid #fff; color: #fff; 
+/*20px,20px  */
+}
+.game .pic.active{
+    border:3rpx solid #e33f3f;
+}
+.pic0,.pic3,.pic6{ left: 0; }
+.pic1,.pic4,.pic7{ left: 96px; }
+.pic2,.pic5,.pic8{ left: 192px; }
+
+
