--- a/pages/keep/keep.wxml
+++ b/pages/keep/keep.wxml
@@ -6,7 +6,8 @@
     </view>
     <view class='content'>
          <view class='avatarUrl'> 
-            <image src="{{userInfo.avatarUrl}}" mode='widthFix'></image> 
+            <image wx:if="{{userInfo}}" src="{{userInfo.avatarUrl}}" mode='widthFix'></image> 
+            <image wx:else src="../images/user.png" mode='widthFix'></image>   
          </view>
          <view class='avatarUrl'> 
             <view class='nickName'>{{userInfo.nickName}}
@@ -20,27 +21,37 @@
     </view>
     <!--收到  -->
     <view class='keepList' wx:if="{{value == 1}}">
-        <view class='itemkeep' wx:for="{{receive_list}}" bindtap='inform' data-index='{{index}}' data-red_id='{{item.red_id}}'>
-            <view class='sum item'>
-                <view class='left'>{{item.content}}</view>
-                <view class='right'>￥{{item.money}}</view>
-            </view> 
-            <view class='time item'>
-                <view class='left'>{{item.receive_time}}</view>
-                <view class='right'>{{item.receive_count}}/{{item.total_count}}</view>
+        <view class='keepList' wx:if="{{receive_list.length==0}}">
+            <view class='center' style='text-align:center;font-size:26rpx;padding:20rpx 0;'>暂时没有数据</view>
+        </view>
+        <view class='itemkeeps' wx:else>
+            <view class='itemkeep' wx:for="{{receive_list}}" bindtap='inform' data-index='{{index}}' data-red_id='{{item.red_id}}'>
+                <view class='sum item'>
+                    <view class='left'>{{item.content}}</view>
+                    <view class='right'>￥{{item.money}}</view>
+                </view> 
+                <view class='time item'>
+                    <view class='left'>{{item.receive_time}}</view>
+                    <view class='right'>{{item.receive_count}}/{{item.total_count}}</view>
+                </view>
             </view>
         </view>
     </view>
     <!--发出  -->
     <view class='keepList' wx:if="{{value == 2}}">
-        <view class='itemkeep' wx:for="{{send_list}}" bindtap='inform' data-index='{{index}}' data-red_id='{{item.red_id}}'>
-            <view class='sum item'>
-                <view class='left'>{{item.content}}</view>
-                <view class='right'>￥{{item.total_money}}</view>
-            </view> 
-            <view class='time item'>
-                <view class='left'>{{item.add_time}}</view>
-                <view class='right'>{{item.receive_count}}/{{item.total_count}}</view>
+        <view class='keepList' wx:if="{{send_list.length==0}}">
+            <view class='center' style='text-align:center;font-size:26rpx;padding:20rpx 0;'>暂时没有数据</view>
+        </view>
+        <view class='itemkeeps' wx:else>
+            <view class='itemkeep' wx:for="{{send_list}}" bindtap='inform' data-index='{{index}}' data-red_id='{{item.red_id}}'>
+                <view class='sum item'>
+                    <view class='left'>{{item.content}}</view>
+                    <view class='right'>￥{{item.total_money}}</view>
+                </view> 
+                <view class='time item'>
+                    <view class='left'>{{item.add_time}}</view>
+                    <view class='right'>{{item.receive_count}}/{{item.total_count}}</view>
+                </view>
             </view>
         </view>
     </view>
