--- a/pages/inform/inform.wxss
+++ b/pages/inform/inform.wxss
@@ -318,6 +318,7 @@ audio{
   opacity: 0;
   width: 50rpx;
   height: 50rpx;
+  z-index: 9;
 }
 .pinimg{
   width:80%;
@@ -427,5 +428,7 @@ body{ min-height: 100vh; background-color: #f5f5f5; font-size: 15px; }
 .pic0,.pic3,.pic6{ left: 0; }
 .pic1,.pic4,.pic7{ left: 96px; }
 .pic2,.pic5,.pic8{ left: 192px; }
-
+audio{
+  width:140rpx;background:#f2f2f2;color:#626262;border:1px solid #ddd;border-radius:8rpx;height:60rpx;margin-left:10rpx;
+}
 
