--- a/pages/inform/inform.wxss
+++ b/pages/inform/inform.wxss
@@ -6,6 +6,7 @@
 }
 .content .avatarUrl image{
     width:140rpx;
+    height: 140rpx;
     border-radius: 50%;
     border:2px solid #fff;
     box-sizing: border-box;
@@ -240,6 +241,7 @@ view.again{
 }
 .success .avatarUrl image{
     width:140rpx;
+    height: 140rpx;
     border-radius: 50%;
     border:2px solid #fff;
     box-sizing: border-box;
