--- a/pages/keep/keep.wxss
+++ b/pages/keep/keep.wxss
@@ -22,6 +22,7 @@
 }
 .content .avatarUrl image{
     width:140rpx;
+    height: 140rpx;
     border-radius: 50%;
     border:2px solid #d24d46;
     box-sizing: border-box;
