--- a/pages/star/star.wxss
+++ b/pages/star/star.wxss
@@ -1,19 +1,16 @@
 /* pages/star/star.wxss */
-page{height:100%}
+page{
+  height: 100%;
+}
 .container {
   padding: 0;
-  margin: 0;
   overflow: hidden;
-  height:100%;
 }
 .haibao{
   width:100%;
-  height:100%;
+  height: 100%;
   display: block;
-  padding: 0;
 }
 .haibao image{
-  width:100%;
-  padding: 0;
-  overflow: hidden;
+	width:100%;
 }
